--- a/views/country.erb
+++ b/views/country.erb
@@ -1,3 +1,7 @@
 <h1> Convert <%=@original_currency%> </h1>
 <a> Go <a href = "/"> back </a> </a>
-
+<ul>
+<% @api_3lcountry.each do |country| %>
+  <li> <a href= "<%=@original_currency%>/<%=country%>" > Convert 1 <%= @original_currency%> to <%=country%> </a> </li>
+<%end %>
+</ul>
